Finished searching and censorship
