# internal/pkg/common/request.go
@@ -30,6 +30,11 @@ type TransactionRequest struct {
 	Value       int    `json:"value"`
 }
 
+type CensorRequest struct {
+	ID       int  `json:"id"`
+	IsPassed bool `json:"is_passed"`
+}
+
 // This type is user's login information stored in the context of gin.
 // The value comes from JWT token, so we can use it to get user's information.
 type LoginUser struct {
